# octo-encryption-cpp

./: CMakeLists.txt  README.md  conanfile.py
cmake/: LoadConanBuildInfo.cmake
include/octo-encryption-cpp/: base64.hpp  secure-random.hpp
include/octo-encryption-cpp/digests/: digest.hpp
include/octo-encryption-cpp/digests/ssl/: ssl-digest.hpp
include/octo-encryption-cpp/encryptors/: encrypted-string.hpp  encryptor.hpp  material.hpp  sym-encrypt-layer-strategy.hpp
include/octo-encryption-cpp/encryptors/materials/: simple-material.hpp
include/octo-encryption-cpp/encryptors/ssl/: ssl-cipher.hpp  ssl-encryptor.hpp
src/: base64.cpp  secure-random.cpp
src/digests/ssl/: ssl-digest.cpp
src/encryptors/: encryptor.cpp  sym-encrypt-layer-strategy.cpp
src/encryptors/ssl/: ssl-cipher.cpp  ssl-encryptor.cpp
unittests/: CMakeLists.txt
unittests/src/: base64-tests.cpp  encrypted-string-tests.cpp  ssl-digests-tests.cpp  ssl-encryptors-tests.cpp  test.cpp
